[package]
name = "linear-map"
version = "0.0.4"
license = "MIT/Apache-2.0"
description = "A map implemented by searching linearly in a vector."
authors = [
    "Andrew Paseltiner <apaseltiner@gmail.com>",
    "Tobias Bucher <tobiasbucher5991@gmail.com>",
]
repository = "https://github.com/contain-rs/linear-map"
documentation = "https://contain-rs.github.io/linear-map/linear_map"
keywords = ["data-structures"]
readme = "README.md"

[features]
nightly = []

[lib]
test = false
bench = false
