[package]
name = "linear-map"
version = "1.2.1"
license = "MIT/Apache-2.0"
description = "A map implemented by searching linearly in a vector."
authors = [
    "Andrew Paseltiner <apaseltiner@gmail.com>",
    "Tobias Bucher <tobiasbucher5991@gmail.com>",
]
repository = "https://github.com/contain-rs/linear-map"
documentation = "https://contain-rs.github.io/linear-map/linear_map"
keywords = ["data-structures"]
readme = "README.md"

[features]
nightly = []
serde_impl = ["serde", "serde_test"]

[dependencies]
serde = { version = "1.0", optional = true }
serde_test = { version = "1.0", optional = true }

[lib]
test = false
bench = false
